--- a/pom.xml
+++ b/pom.xml
@@ -255,6 +255,13 @@
             <artifactId>fastjson-jaxrs-json-provider</artifactId>
             <version>0.3.1</version>
         </dependency>
+
+        <!--pinyin4j-->
+        <dependency>
+            <groupId>pinyin4j</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -266,8 +273,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.2</version>
                     <configuration>
-                        <source>1.7</source>
-                        <target>1.7</target>
+                        <source>1.8</source>
+                        <target>1.8</target>
                         <encoding>UTF-8</encoding>
                         <showWarnings>true</showWarnings>
                     </configuration>
