--- a/bos_fore/pom.xml
+++ b/bos_fore/pom.xml
@@ -11,6 +11,30 @@
     <name>bos_fore</name>
     <description>bos前端系统</description>
     <dependencies>
+        <!--阿里大鱼短信服务sdk-->
+        <dependency>
+            <groupId>aliyun.java.sdk</groupId>
+            <artifactId>core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>aliyun.java.sdk</groupId>
+            <artifactId>dysmsapi</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <!--crm和bos系统实体类-->
+        <dependency>
+            <groupId>com.hervey</groupId>
+            <artifactId>crm_entity</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.hervey</groupId>
+            <artifactId>bos_entity</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>bos_fore</finalName>
